# LMOps

./: .gitmodules  README.md  ai_enhanced_cmds.py
uprise/semantic_parsing_with_constrained_lm/: NOTICE.md  README.md  SUPPORT.md  pyproject.toml
uprise/semantic_parsing_with_constrained_lm/src/semantic_parsing_with_constrained_lm/: cache.py  datum.py  earley_partial_parse.py  eval.py  fewshot.py  fit_max_steps.py  lm.py  lm_bart.py  lm_gpt2.py  lm_openai_gpt3.py  model.py  paths.py  run_exp.py  search.py  trie_partial_parse.py
uprise/semantic_parsing_with_constrained_lm/src/semantic_parsing_with_constrained_lm/async_tools/: batch_helper.py  limits.py
uprise/semantic_parsing_with_constrained_lm/src/semantic_parsing_with_constrained_lm/configs/: calflow_emnlp_camera_ready.py  overnight_emnlp_camera_ready.py  qdmr_break_emnlp_camera_ready.py  smpa_20210929_zeroshot.py
uprise/semantic_parsing_with_constrained_lm/src/semantic_parsing_with_constrained_lm/domains/: calflow_eval_utils.py  qdmr_break.py
uprise/semantic_parsing_with_constrained_lm/src/semantic_parsing_with_constrained_lm/earley/: agenda.py  earley.py  grammar.py  input.py  recognize.py
uprise/semantic_parsing_with_constrained_lm/src/semantic_parsing_with_constrained_lm/finetune/: batch_sampler.py  lm_finetune.py
uprise/semantic_parsing_with_constrained_lm/src/semantic_parsing_with_constrained_lm/scfg/: char_grammar.py  scfg.py  (+5 more)
uprise/semantic_parsing_with_constrained_lm/tests/semantic_parsing_with_constrained_lm/: test_earley_grammar.py  test_earley_partial_parse.py  test_fewshot.py  test_lm_gpt2.py
(+1746 files in other folders)
